tests/baselines/reference/tsxAttributeResolution1.errors.txt
tests/cases/conformance/jsx/file.tsx(23,8): error TS2322: Type '{ x: "0"; }' is not assignable to type 'Attribs1'.
  Types of property 'x' are incompatible.
    Type '"0"' is not assignable to type 'number'.
tests/cases/conformance/jsx/file.tsx(24,8): error TS2339: Property 'y' does not exist on type 'Attribs1'.
tests/cases/conformance/jsx/file.tsx(25,8): error TS2339: Property 'y' does not exist on type 'Attribs1'.
tests/cases/conformance/jsx/file.tsx(26,8): error TS2322: Type '{ x: "32"; }' is not assignable to type 'Attribs1'.
  Types of property 'x' are incompatible.
    Type '"32"' is not assignable to type 'number'.
tests/cases/conformance/jsx/file.tsx(27,8): error TS2339: Property 'var' does not exist on type 'Attribs1'.
tests/cases/conformance/jsx/file.tsx(29,1): error TS2322: Type '{}' is not assignable to type '{ reqd: string; }'.
  Property 'reqd' is missing in type '{}'.
tests/cases/conformance/jsx/file.tsx(30,8): error TS2322: Type '{ reqd: 10; }' is not assignable to type '{ reqd: string; }'.
  Types of property 'reqd' are incompatible.
    Type '10' is not assignable to type 'string'.


==== tests/cases/conformance/jsx/file.tsx (7 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    		test1: Attribs1;
    		test2: { reqd: string };
    		var: { var: string };
    	}
    }
    interface Attribs1 {
    	x?: number;
    	s?: string;
    }
    
    // OK
    <test1 x={0} />; // OK
    <test1 />; // OK
    <test1 data-x={true} />; // OK
    
    <test2 reqd='true' />; // OK
    <test2 reqd={'true'} />; // OK
    
    // Errors
    <test1 x={'0'} />; // Error, '0' is not number
           ~~~~~~~
!!! error TS2322: Type '{ x: "0"; }' is not assignable to type 'Attribs1'.
!!! error TS2322:   Types of property 'x' are incompatible.
!!! error TS2322:     Type '"0"' is not assignable to type 'number'.
    <test1 y={0} />; // Error, no property "y"
           ~~~~~
!!! error TS2339: Property 'y' does not exist on type 'Attribs1'.
    <test1 y="foo" />; // Error, no property "y"
           ~~~~~~~
!!! error TS2339: Property 'y' does not exist on type 'Attribs1'.
    <test1 x="32" />; // Error, "32" is not number
           ~~~~~~
!!! error TS2322: Type '{ x: "32"; }' is not assignable to type 'Attribs1'.
!!! error TS2322:   Types of property 'x' are incompatible.
!!! error TS2322:     Type '"32"' is not assignable to type 'number'.
    <test1 var="10" />; // Error, no 'var' property
           ~~~~~~~~
!!! error TS2339: Property 'var' does not exist on type 'Attribs1'.
    
    <test2 />; // Error, missing reqd
    ~~~~~~~~~
!!! error TS2322: Type '{}' is not assignable to type '{ reqd: string; }'.
!!! error TS2322:   Property 'reqd' is missing in type '{}'.
    <test2 reqd={10} />; // Error, reqd is not string
           ~~~~~~~~~
!!! error TS2322: Type '{ reqd: 10; }' is not assignable to type '{ reqd: string; }'.
!!! error TS2322:   Types of property 'reqd' are incompatible.
!!! error TS2322:     Type '10' is not assignable to type 'string'.
    
    // Should be OK
    <var var='var' />;
    